force-app/main/default/objects/Sales_And_Market__c/Sales_And_Market__c.object-meta.xml
<CustomObject>
    <label>Dealer Profile</label>
    <nameField>
        <label>Sales And Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>