force-app/main/default/objects/Sales_And_Market__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_And_Markets</relationshipName>
    <type>Lookup</type>
</CustomField>