force-app/main/default/objects/Sales_And_Market__c/fields/Ancillary_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Purchases__c</fullName>
    <label>Ancillary Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>