force-app/main/default/objects/Sales_And_Market__c/fields/Ancillary_Purchases_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Purchases_Percentage__c</fullName>
    <label>Ancillary Purchases(%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>