force-app/main/default/objects/Sales_And_Market__c/fields/Annual_Tile_Ancillary_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Annual_Tile_Ancillary_Purchases__c</fullName>
    <label>Annual Tile + Ancillary Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>