force-app/main/default/objects/Sales_And_Market__c/fields/Annual_Tile_Sales_Include_labor__c.field-meta.xml
<CustomField>
    <fullName>Annual_Tile_Sales_Include_labor__c</fullName>
    <label>Annual Tile Sales (Include labor)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>