force-app/main/default/objects/Sales_And_Market__c/fields/Assumed_Annual_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Annual_Purchases__c</fullName>
    <label>Assumed Annual Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>