force-app/main/default/objects/Sales_And_Market__c/fields/Assumed_Annual_Purchases_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Annual_Purchases_Percentage__c</fullName>
    <label>Assumed Annual Purchases(%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>