force-app/main/default/objects/Sales_And_Market__c/fields/Created_year__c.field-meta.xml
<CustomField>
    <fullName>Created_year__c</fullName>
    <label>Created year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>