force-app/main/default/objects/Sales_And_Market__c/fields/ltd_Ancillary_Sales_MST__c.field-meta.xml
<CustomField>
    <fullName>ltd_Ancillary_Sales_MST__c</fullName>
    <label>LTD Ancillary Sales MST</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>