force-app/main/default/objects/Sales_And_Market__c/fields/LTD_Tile_Ancillary_Sales__c.field-meta.xml
<CustomField>
    <fullName>LTD_Tile_Ancillary_Sales__c</fullName>
    <label>LTD Tile + Ancillary Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>