force-app/main/default/objects/Sales_And_Market__c/fields/ltd_Tile_Sales_Market_MST__c.field-meta.xml
<CustomField>
    <fullName>ltd_Tile_Sales_Market_MST__c</fullName>
    <label>LTD Tile Sales Market MST</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>