force-app/main/default/objects/Sales_And_Market__c/fields/LTD_Tile_Sales_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>LTD_Tile_Sales_Market_Share__c</fullName>
    <label>LTD Tile Sales Market Share</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>