force-app/main/default/objects/Sales_And_Market__c/fields/Tile_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Tile_Purchases__c</fullName>
    <label>Tile Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>