force-app/main/default/objects/Sales_And_Market__c/fields/Total_Annual_Revenue_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Revenue_Percentage__c</fullName>
    <label>Total Annual Revenue(%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>